# cpp-template

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  copy.py
cli/: main.cc
src/: cpptemplate.cc  cpptemplate.hpp
src/cpptemplate/: exception.hpp
